# hackathon-tsc-flovemi

./: .clinerules  .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  README.md  claude_mcp_config.json  test.md
.claude/skills/: deploy.md  goal.md  plan.md
.cline/skills/: breadboarding.md  design.md  testing.md
backend/: Procfile  main.py  pyproject.toml  test_supabase_integration.py
backend/app/: config.py  main.py
backend/app/dto/: __init__.py  schemas.py
backend/app/services/: company_service.py  crawler.py  dashboard_service.py  latinfo_client.py  region_service.py  supabase_client.py
cases/: README.md
codigo/: .env.example  README.md  jest.config.ts  package-lock.json  package.json  proxy.ts
codigo/app/: Providers.tsx  globals.css  layout.tsx  page.tsx
codigo/app/components/: DataSourceBanner.tsx  EnvironmentalSection.tsx  Footer.tsx  Header.tsx  IllegalMiningSection.tsx  InvestmentSection.tsx  LegalSection.tsx  MethodologyCard.tsx  MiningProjectsSection.tsx  (+12 more)
codigo/lib/: api.ts  mocks.ts  types.ts
codigo/public/: proyectos_consolidados.json
codigo/scripts/: schema.sql  seed-latinfo.ts  seed.js  test-all-tables.js  test-db.js  test-endpoints.js  test-google-real.js  test-latinfo.js  test-rucs.js  test-search.js  test-user-ruc.js
docs/: ai-context.md  api-contract.md  arquitectura.md  minerawatch-plan.md  requerimientos.md
docs/adr/: 001-clean-architecture-serverless.md  002-extension-proyectos-mineros-mineria-ilegal.md
docs/ai-context/: hybrid-data-sync-plan.md  scraping-plan.md
supabase/.temp/: linked-project.json
(+83 files in other folders)
