[project]
name = "minerawatch-mining-comp-crawler"
version = "0.1.0"
description = "Service to populate database in supabase"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.138.1",
    "supabase>=2.6.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.4",
    "uvicorn>=0.49.0",
]
